feat: add v1.3 path history docs
